# stock-signal

./: .gitignore  README.md  outputs  pyproject.toml
src/stock_signal/: __main__.py  client.py  config.py  config.toml  pipeline.py  scoring.py  store.py  universe.py
src/stock_signal/core/: clients.py  scoring.py  store.py  swarm.py  universe.py
src/stock_signal/factors/: __init__.py  accruals.py  asset_growth.py  fscore.py  guards.py  momentum.py  momentum_quality.py  net_issuance.py  quality.py  revenue_accel.py  revisions.py  sue.py
src/stock_signal/sql/: queries.sql
tests/: conftest.py  fixtures.json  scratch.py  test_clients.py  test_factors.py  test_integration.py  test_scoring.py
